--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,6 +266,10 @@ p {
         font-size: 0.9rem;
         padding: 8px 12px;
     }
+
+    .time-box span {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 480px) {
