--- a/styles/styles.css
+++ b/styles/styles.css
@@ -218,7 +218,7 @@ p {
 .time-box p {
     margin: 0;
     font-size: 16px;
-    color: #ffffff;
+    color: #0e0d0d;
     font-family: "Courgette", cursive;
     font-weight: 400;
     font-style: normal;
